Zhannel Malikaidar -- Database connection error fixed + business rules erorr fixed